# python-functional-programming

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-docs.txt
.github/workflows/: pages.yml
course-book/: index.md
course-book/module-00/: M00C00.md  M00C01.md
course-book/module-01/: M01C01.md  M01C02.md  M01C04.md  M01C05.md  M01C06.md  M01C09.md
course-book/module-02/: M02C02.md  M02C04.md  M02C05.md  M02C07.md  M02C08.md  M02C09.md  M02C10.md
course-book/module-03/: M03C04.md  M03C06.md  M03C07.md  M03C08.md
course-book/module-04/: M04C01.md  M04C03.md  M04C05.md  M04C06.md  M04C08.md
course-book/module-05/: M05C03.md  M05C04.md  M05C05.md  M05C10.md
course-book/module-06/: M06C01.md  M06C02.md  M06C03.md  M06C05.md  M06C06.md  M06C07.md  M06C09.md
course-book/module-07/: M07C01.md  M07C03.md  M07C09.md
module-01/: M01C03.md  M01C07.md  M01C08.md  M01C10.md
module-02/: M02C01.md  M02C03.md  M02C06.md
module-03/: M03C01.md  M03C02.md  M03C03.md  M03C05.md  M03C09.md  M03C10.md
module-04/: M04C02.md  M04C04.md  M04C07.md  M04C09.md  M04C10.md
module-05/: M05C01.md  M05C02.md  M05C06.md  M05C07.md  M05C08.md  M05C09.md
module-06/: M06C04.md  M06C08.md  M06C10.md
module-07/: M07C02.md  M07C04.md  M07C05.md  M07C06.md  M07C07.md  M07C08.md  M07C10.md
module-08/: M08C03.md  M08C05.md  M08C07.md
scripts/: download_data.sh
tests/: conftest.py  helpers.py  test_composition.py  test_perf_equivalence.py  test_pydantic_edges.py  test_rag_api.py  test_result_option.py  test_serde.py  test_streaming.py  test_writer_laws.py
(+407 files in other folders)
